Fixing scrollbar issue

--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ body {
   width: 1128px;
   margin: 0 auto;
   background-color: #f4f5f6;
-}
-::-webkit-scrollbar {
-    display: none;
+  overflow-y: scroll;
 }
 
 main {
